--- a/client/src/styles/Picture.css
+++ b/client/src/styles/Picture.css
@@ -1,6 +1,20 @@
-.pictureContainer {
-    width: auto;
-    border: 1px solid black;
-    height: 500px;
+.photo {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    justify-content: center;
+    
+}
+
+button {
+    border: none;
+    padding: 15px 25px;
+    text-align: center;
+    text-decoration: none;
+    position: relative;
+    top: 145px;
+    background-color: lightgray;
+    border-radius: 3px;
+    font-size: 16px;
 }
 
